fix potential concurrency issues